Small cosmetic fixes in gallery, bringing back overflow-y

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1,5 +1,5 @@
 body {
-    overflow-y: hidden;
+    // overflow-y: hidden;
 }
 
 footer {
@@ -8,6 +8,10 @@ footer {
     border-top: 1px solid #eeeeee;
     padding-top: 15px;
     width: 100%;
+}
+
+ul {
+    padding-left: 0;
 }
 
 #main {
@@ -42,7 +46,7 @@ a {
 
 .well {
     padding: 19px 44px !important;
-    height: auto !important; /*min-height hack*/
+    // height: auto !important; /*min-height hack*/
 }
 
 .modal {
@@ -99,7 +103,8 @@ a {
         cursor: pointer;
     }
     margin: 0px 10px 10px 0;
-    float: left;
+    // float: left;
+    display: inline-block;
 }
 
 span.img-overlay {
